--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 MODIFY BY SOHEL SAYYED -->
 <html lang="en">
   <head>
-    <title>ACE - x - MCODO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Code Editor X Sohez</title>
+
     <link rel="stylesheet" href="./style/settings.css" />
     <link rel="stylesheet" href="./style/editor.css" />
 
