--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ MODIFY BY SOHEL SAYYED -->
     <link rel="stylesheet" href="./style/settings.css" />
     <link rel="stylesheet" href="./style/editor.css" />
 
-    <script
+<!--     <script
       src="./src-noconflict/ace.js"
       type="text/javascript"
       charset="utf-8"
     ></script>
-    <script src="./src-noconflict/ext-language_tools.js"></script>
+    <script src="./src-noconflict/ext-language_tools.js"></script> -->
   </head>
   <header>
     <button id="btn" type="button" onclick="settingShow()">Settings</button>
@@ -37,6 +37,7 @@ MODIFY BY SOHEL SAYYED -->
 
     <div id="editor"></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.6/ace.js" integrity="sha512-gqjFRgajJiZM9GmvHEE7vpzPSL/moP+zxpl4F6lRNJDOI3pb2Tvu8k5vUjAzJKsl0ragzWL0/WasKhR430PkCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/logix.js"></script>
     <script src="./js/theme.js"></script>
     <script src="./js/font-size.js"></script>
